Adding some enemy handling kick and sheet handling to this engine